@@ -12,6 +12,7 @@ MANIFEST
 README
 t/0_Array.t
 t/0_LinkedList.t
+t/each_loop.t
 t/LRU.t
 t/Virtual.t
 META.yml                                 Module meta-data (added by MakeMaker)
