@@ -14,27 +14,28 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 cab3a43f0ee9cc7a4b4ca5191091231a37520795 Changes
-SHA1 078a3acda3bc01322ec7c294bf2b362e16b128a4 INSTALL
-SHA1 155b6e94c69d44396e9a957059a4c60530211b39 MANIFEST
-SHA1 7d20e5836f9b594a274f2abe3bd1cfc04ea9899a META.yml
+SHA1 6389376fdde5e4ba004bf3a06f197aaf249d4470 Changes
+SHA1 e6e7737aca007f0463b46dd0d83a13c10c12b605 INSTALL
+SHA1 ad7ee635490e2a4f4d3070d65689445ad948bb1f MANIFEST
+SHA1 88df0f8bbeb9d2d09268a63d167c1f5a00f628a8 META.yml
 SHA1 e059d46576834b5c4fa298b85b3352eed3bead1b Makefile.PL
-SHA1 af74af7beba7ffed1e337ef646a3dbe33c93b7d0 README
+SHA1 b78cd5e6bd9bb9591ff5bc80c9d6cca66d8cb50e README
 SHA1 835a42d102a8fb63cef187a9c9fa99d716a65653 bench/big_test_data
 SHA1 e2328dabb74c0e8625e9ae3d3b5471246b727259 bench/read
 SHA1 1b319edfbe4f7d298f178da4a6e19356f2b2e9a2 bench/time
-SHA1 533f3d00dbffb9874bc09408e2e131f5f4e256ac lib/Tie/Cache/LRU.pm
-SHA1 df57a43dcdfeb59f0323e286b36e6cb843b4eb80 lib/Tie/Cache/LRU/Array.pm
-SHA1 951c6206d510fcb03cd91134a491647a280574a3 lib/Tie/Cache/LRU/LinkedList.pm
+SHA1 4b198c6d160e98f0f363860ea3477c4bb5daa905 lib/Tie/Cache/LRU.pm
+SHA1 d75c4dde1483fa78b1e9c398b1980090058c5492 lib/Tie/Cache/LRU/Array.pm
+SHA1 2c7739e9c3beff13860529df91db226a528ed43f lib/Tie/Cache/LRU/LinkedList.pm
 SHA1 88cc909d9005440693198604a7de4f9535a0bd53 lib/Tie/Cache/LRU/Virtual.pm
 SHA1 c68a257407e9d621de3f0b8da9ee8f98337dab9a t/0_Array.t
 SHA1 b7b82ca822d95203030e29ddd76f83878973f71f t/0_LinkedList.t
 SHA1 3b66e75647341ef214dc5ea6e8b90fb24d557b7c t/LRU.t
 SHA1 e6a25d406a1ed586bceadef6c64d0b5408e41974 t/Virtual.t
+SHA1 aab27f3884be269323cd06ca93b7ab08f5ca6cc1 t/each_loop.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Darwin)
 
-iEYEARECAAYFAkkBSN0ACgkQWMohlhD1QyciKACgoJpZF5jrPpb2aACF6P00tFDq
-ntYAn03ibR7oTiZbs0WfhF94t4DLerch
-=8fdO
+iEYEARECAAYFAkkBTE4ACgkQWMohlhD1QydEAwCfWR4D28rMjMnBajDCBL/INv5P
+L1oAnj/B/GWzlyPIwp5iXNO4GKAqtDqh
+=sF11
 -----END PGP SIGNATURE-----
