@@ -1,3 +1,12 @@
+Next
+    Test Fixes
+    * Verified that each() + delete() works, as promised in "perldoc -f each"
+    * Forgot to ship the new each() test in the last version.
+
+    Doc Fixes
+    * Forgot to update the requirements list in the README in the last version
+
+
 20081023  Thu Oct 23 21:02:04 PDT 2008
     Bug Fixes
     * each() no longer goes into an infinite loop
